syntax = "proto3";

package mfa;

service MfaService {
    // Verify MFA authenticator code for a user
    rpc VerifyMfaCode(VerifyMfaCodeRequest) returns (VerifyMfaCodeResponse);
}

message VerifyMfaCodeRequest {
    string user_id = 1;
    string authenticator_code = 2;
}

message VerifyMfaCodeResponse {
    bool is_valid = 1;
    string reason = 2;
    string message = 3;
    int64 locked_until = 4; // Unix timestamp, only set when locked
}

